# windows-features

./: Cargo.toml  README.md  Test-Tool.ps1  Update-InstalledVersion.ps1
original/: Get-FeaturesJson.ps1  Show-Features.ps1
src/: main.rs
tests/devices_display/: expected.txt  test.rs
tests/wildcard/: expected.txt  test.rs
